# api-testing

./: .gitignore  README.md  poetry.toml  pyproject.toml  setup_env.py
tests/: conftest.py  test_API_Key_retrieval.py
tests/end_to_end/: test_api_key_retrieval.py  test_api_key_validation.py
tests/tool_validation/: README.md  test_email_connection.py  test_pytest_reporting.py
tests/utils/: api_key_handler.py  imap_handler.py  requests_functions.py  utils.py
