[project]
name = "aemet-api-e2e-testing"
version = "0.1.0"
description = ""
authors = [
    {name = "cchp13"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pytest (>=8.3.4,<9.0.0)",
    "selenium (>=4.28.1,<5.0.0)",
    "pytest-html (>=4.1.1,<5.0.0)",
    "requests (>=2.32.3,<3.0.0)"
]

[tool.poetry]
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
